[tool.poetry]
name = "rmfuse"
version = "0.1.0"
description = ""
authors = ["Robert Schroll <rschroll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bidict = "^0.21.2"
pyfuse3 = "^3.2.0"
rmrl = "^0.1.2"
rmcl = {path = "rmcl-0.1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"
jedi = "0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
