[tool.poetry]
name = "rmfuse"
version = "0.1.1"
description = ""
authors = ["Robert Schroll <rschroll@gmail.com>"]
license = "MIT"
repository = "https://github.com/rschroll/rmfuse"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
bidict = "^0.21.2"
pyfuse3 = "^3.2.0"
rmrl = "^0.1.2"
rmcl = "^0.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"
jedi = "0.17.2"
pylint = "^2.6.0"

[tool.poetry.scripts]
rmfuse = "rmfuse.fuse:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
